--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
 #      - ./docker-runtime/mariadb-init:/docker-entrypoint-initdb.d # Place init .sql file(s) here.
 
   php:
-    image: wodby/drupal-php:7.0 # Allowed: 7.0, 5.6.
+    image: alehkot/drupal-php:7.0 # Allowed: 7.0, 5.6.
     environment:
       PHP_SITE_NAME: dev
       PHP_HOST_NAME: localhost:8000
@@ -58,13 +58,13 @@ services:
 #  redis:
 #    image: redis:3.2-alpine
 
-#  memcached:
-#    image: memcached:1.4-alpine
+  memcached:
+    image: alehkot/alpine-memcached
 
-#  memcached-admin:
-#    image: phynias/phpmemcachedadmin
-#    ports:
-#      - "8006:80"
+  memcached-admin:
+    image: phynias/phpmemcachedadmin
+    ports:
+      - "8006:80"
 
 #  solr:
 #    image: solr:5.5-alpine
